--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .hover-fill {
+        @apply w-6 h-6 transition-colors duration-200 fill-current text-gray-500;
+    }
+    .hover-fill:hover {
+        @apply fill-ctp-blue;
+    }
+}
